--- a/main.css
+++ b/main.css
@@ -137,6 +137,7 @@ li{
     border: 0px;
     padding: 0px;
     box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.2);
+    z-index: 1;
 }
 
 .quant-control:hover{
@@ -284,10 +285,10 @@ select{
     height: 30px;
     padding: 0px;
     font-size: 25px;
-    color: white;
-    border: 2px solid white;
+    color: rgb(123, 123, 123);
     background: rgba(147, 40, 40, 0.0);
     border-radius: 5px;
+    border: 0;
     justify-content: center;
     align-items: center;
 }
@@ -437,6 +438,34 @@ h3{
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
     z-index: 10;
+}
+
+.receive-button{
+    background-color: rgb(87, 179, 87);
+    font-size: 16px;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    border: 1px green;
+    border-radius: 10px;
+    padding: 8px;
+    width: 100px;
+    height: 35px;
+    transform: translateY(-20px);
+}
+
+.hidden-menu{
+    transition: 0.2s;
+    background-color: rgb(255, 255, 255);
+    filter: blur(0.7);
+    box-shadow: 0px 5px 10px 5px rgba(0, 0, 0, 0.2);
+    width: 85vw;
+    height: auto;
+    z-index: 3;
+    position: relative;
+    border-radius: 20px;
+    transform: translate(-40.5vw, 15px);
+    visibility: hidden;
+    padding: 10px;
 }
 
 .size-button{
