--- a/main.css
+++ b/main.css
@@ -137,7 +137,7 @@ li{
     border: 0px;
     padding: 0px;
     box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.2);
-    z-index: 1;
+ 
 }
 
 .quant-control:hover{
@@ -178,6 +178,8 @@ select{
     color: rgb(255, 255, 255);
     font-size: 16px;
     transition: 0.2s;
+    position: relative;
+    z-index: 0;
 }
 .filter-button:hover{
     background-color: rgb(35, 138, 228);
@@ -466,6 +468,7 @@ h3{
     position: relative;
     border-radius: 20px;
     left: -152px;
+    transform: translateY(30px);
     visibility: hidden;
     padding: 10px;
 }
