--- a/main.css
+++ b/main.css
@@ -4,6 +4,7 @@ html,body{
     background: rgb(10, 10, 10);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#9f0000",GradientType=1);
     text-align: center;
+    touch-action: manipulation;
 }
 
 body{
@@ -14,6 +15,10 @@ body{
 *{
     font-family: Arial, Helvetica, sans-serif;
     margin: 0px;
+    touch-action: manipulation;
+}
+
+div{
     touch-action: manipulation;
 }
 
