--- a/popups.css
+++ b/popups.css
@@ -9,7 +9,7 @@
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.246);
 }
 
-.receive-button{
+.receive-button-on{
     background-color: rgb(87, 179, 87);
     font-size: 16px;
     font-weight: bold;
@@ -21,6 +21,19 @@
     height: 35px;
     transform: translateY(-20px);
     box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.3);
+}
+
+.receive-button-off{
+    background-color: rgb(226, 226, 226);
+    font-size: 16px;
+    font-weight: bold;
+    color: rgb(255, 255, 255);
+    border: 1px rgb(123, 123, 123);
+    border-radius: 10px;
+    padding: 8px;
+    width: 100px;
+    height: 35px;
+    transform: translateY(-20px);
 }
 
 .hidden-menu{
