--- a/main.css
+++ b/main.css
@@ -362,21 +362,36 @@ h3{
     font-size: 28px;
 }
 
+.product-separator{
+    padding: 6px;
+    height: 24px;
+    width: 95%;
+    display: inline-flex;  
+    border-radius: 5px;
+    background-color:rgb(239, 239, 239);
+    text-align: center;
+    justify-content: center;
+    align-content: center;
+    font-size: 20px;
+    font-weight: 600;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
 .product-list-item{
     margin: 5px;
     height: 100%;
-
-    width: 40vw;
-
-    max-width: 220px;
+    width: 42vw;
+    max-width: 190px;
     display: inline-flex;
+
 }
 
 .product-item{
     vertical-align:top;
-
-    width: 40vw;
-    max-width: 220px;
+    width: 42vw;
+    max-width: 190px;
     
     height: 150px;
     display: flex;
@@ -466,4 +481,9 @@ h3{
 .size-button:hover{
     background-color: rgb(245, 245, 245);
     box-shadow: 0px 3px 0px 0px rgba(0, 0, 0, 0.20) inset;
+}
+
+#product-list{
+    text-align: left;
+    align-content: left;
 }
