--- a/main.css
+++ b/main.css
@@ -514,16 +514,17 @@ h3{
     width: 80px;
     color: rgb(21, 21, 21);
     font-size: 16px;
+    font-weight: bold;
     border: 0px solid black;
     border-radius: 14px;
     box-shadow: 0px 2px 2px 1px rgba(0, 0, 0,0.2);
     transition: 0.3s;
 }
 .bill-button:hover{
-    border: 2px solid rgb(236, 148, 16);
+    border: 2px solid rgb(79, 187, 65);
     box-shadow: 0px 8px 8px 1px rgba(0, 0, 0,0.2);
 
-    background-color: rgb(255, 188, 63);
+    background-color: rgb(176, 230, 171);
 }
 .cancel-button{
 
