--- a/main.css
+++ b/main.css
@@ -492,7 +492,7 @@ h3{
     align-content: left;
 }
 
-#change-confirm{
+.hidden-pane{
     margin-top: 35px;
     background-color: rgba(231, 231, 231, 0.8);
     backdrop-filter: blur(10px);
@@ -550,4 +550,12 @@ h3{
     border-radius: 14px;
     background-color: #3ba526;
     box-shadow: 0px 2px 2px 1px rgba(0, 0, 0,0.2);
+}
+
+.monto-input{
+    display: inline-block;
+    height: 40px;
+    border-radius: 10px;
+    font-size: 16px;
+    width: 200px;
 }
