--- a/salesReport.css
+++ b/salesReport.css
@@ -98,24 +98,35 @@ h5{
 .change-method{
     margin: 10px;
     height: 50px; 
-    width: 40%;
+    width: 50%;
     color: rgb(45, 45, 45);
     font-size: 16px;
     font-weight: bold;
     border: 0px solid black;
     border-radius: 14px;
-    background-color: #a6a6a6;
+    background-color: #d1d1d1;
     box-shadow: 0px 2px 2px 1px rgba(0, 0, 0,0.2);
 }
-.delete-sale{
+.reprint-ticket{
     margin: 10px;
     height: 50px; 
-    width: 40%;
-    color: rgb(255, 255, 255);
+    width: 30%;
+    color: rgb(45, 45, 45);
     font-size: 16px;
     font-weight: bold;
     border: 0px solid black;
     border-radius: 14px;
-    background-color: #d74c47;
+    background-color: #e8c35d;
     box-shadow: 0px 2px 2px 1px rgba(0, 0, 0,0.2);
+}
+.delete-sale{
+    margin: 4px;
+    height: 30px; 
+    width: 90%;
+    color: rgb(220, 0, 0);
+    font-size: 16px;
+    font-weight: bold;
+    border: 0px solid black;
+    border-radius: 14px;
+    background-color: #d74c4700;
 }
