--- a/salesReport.css
+++ b/salesReport.css
@@ -96,37 +96,36 @@ h5{
 
 
 .change-method{
-    margin: 10px;
+    margin: 5px;
     height: 50px; 
-    width: 50%;
+    width: 65%;
     color: rgb(45, 45, 45);
     font-size: 16px;
     font-weight: bold;
     border: 0px solid black;
     border-radius: 14px;
     background-color: #d1d1d1;
-    box-shadow: 0px 2px 2px 1px rgba(0, 0, 0,0.2);
 }
 .reprint-ticket{
-    margin: 10px;
+    margin: 5px;
+    padding: 0;
     height: 50px; 
-    width: 30%;
-    color: rgb(45, 45, 45);
+    width: 20%;
+    color: rgb(255, 255, 255);
     font-size: 16px;
     font-weight: bold;
     border: 0px solid black;
     border-radius: 14px;
-    background-color: #e8c35d;
-    box-shadow: 0px 2px 2px 1px rgba(0, 0, 0,0.2);
+    background-color: #1a82f1;
 }
 .delete-sale{
     margin: 4px;
-    height: 30px; 
+    height: 40px; 
     width: 90%;
-    color: rgb(220, 0, 0);
+    color: rgb(228, 228, 228);
     font-size: 16px;
     font-weight: bold;
     border: 0px solid black;
     border-radius: 14px;
-    background-color: #d74c4700;
+    background-color: #cf211b;
 }
